docs/7.56/md/abennews-620.md
  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 6.xx](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-6.htm) → 

News for Release 6.20

Changes were made in the following areas as part of development in Release 6.20 of SAP Web Application Server:

-   [ABAP Objects in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-objects.htm)
-   [Structure Enhancements in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-structures.htm)
-   [New Catchable Exceptions in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-exceptions.htm)
-   [Additions in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-additions.htm)
-   [Short Dumps in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-dumps.htm)
-   [Tools in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-tools.htm)
-   [System Classes and Methods in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-classes.htm)
-   [Further Changes in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-others.htm)

Continue
[ABAP Objects in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-objects.htm)
[Structure Enhancements in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-structures.htm)
[New Catchable Exceptions in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-exceptions.htm)
[Additions in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-additions.htm)
[Short Dumps in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-dumps.htm)
[Tools in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-tools.htm)
[System Classes and Methods in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-classes.htm)
[Further Changes in Release 6.20](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-620-others.htm)