docs/7.57/md/abennews-620.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 6.xx](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-6.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 6.20, ABENNEWS-620, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASug
gestion for improvement:)

News for Release 6.20

Changes were made in the following areas as part of development in Release 6.20 of SAP Web Application Server:

-   [ABAP Objects in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-objects.htm)
-   [Structure Enhancements in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-structures.htm)
-   [New Catchable Exceptions in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-exceptions.htm)
-   [Additions in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-additions.htm)
-   [Short Dumps in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-dumps.htm)
-   [Tools in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-tools.htm)
-   [System Classes and Methods in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-classes.htm)
-   [Further Changes in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-others.htm)

Continue
[ABAP Objects in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-objects.htm)
[Structure Enhancements in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-structures.htm)
[New Catchable Exceptions in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-exceptions.htm)
[Additions in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-additions.htm)
[Short Dumps in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-dumps.htm)
[Tools in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-tools.htm)
[System Classes and Methods in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-classes.htm)
[Further Changes in Release 6.20](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-620-others.htm)